# Backend_Sibur

./: Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  main.py  model.cbm  pyproject.toml  test.py
.github/workflows/: docker-image.yml  docker-publish.yml
alembic/: env.py
alembic/versions/: 061df323133f_fix2_chemical_tables.py  0c32f4a2f8d7_fix2_sequence_for_chemicaloperations.py  0f7c3c55e6ea_add_percentchemicalelements_table.py  20ad59d7e7c7_initial_chemical_tables.py  2249226fc9c6_initial_user_table.py  27a70aba6695_fix1_chemical_tables.py  5a349e606f7f_initial_users_table.py  61731bff91b0_fix_sequence_for_chemicaloperations.py  6654a4d3d9cd_fix_chemical_objects_source_check.py  785b67ff517f_fix4_chemical_tables.py  7efe5ebe3d0a_fix3_sequence_for_chemicaloperations.py  83c97530b837_fix_sequence_for_chemicalobjects.py  9f118041c5ab_fix3_chemical_tables.py  ad265911badf_fix_sequence_for_percent_chemical_.py  c982b338c99d_fix_sequence_for_user_profile.py  e9710002e27b_update_user_table.py
app/: dependency.py  main.py  settings.py
app/chemicals/: __init__.py  algorithms.py  models.py  properties.py  repository.py  schema.py  service.py
app/chemicals/handlers_ch_operations/: admin_handlers.py  user_handlers.py
app/chemicals/service/: __init__.py  admin_service.py  user_service.py
app/chemicals/user_ch_operations/: handlres.py
app/infrastructure/: __init__.py  accessor.py  database.py
app/users/auth/: handlers.py  schema.py  service.py
app/users/user_profile/: model.py  schema.py
app/users/user_profile/admin/: __init__.py  handlers.py  (+2 more)
